# daytradingbot

./: .env.example  .gitignore  CONTEXT.md  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: validation_checklist.md
config/: settings.yaml
dashboard/: app.py
deploy/: com.eva.trading-bot.dashboard.plist.example  com.eva.trading-bot.scanner.plist.example
docs/: ACCEPTANCE_PROMPT.md  A_PLUS_PRECISION_PROMPT.md  FAILED_AUCTION_TRAP_BRANCH_SUMMARY.md  TESTING_VALIDATION_FRAMEWORK.md
docs/options-alert-bot-course/: README.md  architecture-map.md  build-history.md  build-sequence.md  course-3-session.md  improvement-notes.md  no-code-change-confirmation.md  prompt-library.md  repo-analysis.md  (+5 more)
scripts/: launch_dashboard.command
tests/: test_alert_policy.py  test_carter_squeeze.py  test_dashboard_db.py  test_dashboard_navigation.py  test_dashboard_refresh.py  test_dashboard_status.py  test_data_engine.py  test_failed_auction_trap.py  test_health.py  test_levels.py  test_no_trade_and_analytics.py  test_qa_replay_deploy.py  test_research_agent.py  test_scanner_market_window.py  test_scanner_process.py  test_strategy_scoring_alerts.py  test_trade_journal.py  test_tradingview_embed.py
trading_bot/: __init__.py  __main__.py  alert_policy.py  carter_squeeze.py  cli.py  dashboard_db.py  dashboard_navigation.py  dashboard_refresh.py  dashboard_status.py  day_trade_contract.py  failed_auction_trap.py  health.py  live_paper.py  logging_config.py  models.py  replay.py  scanner.py  settings.py  signal_sources.py  storage.py  summaries.py  tradingview.py
(+39 files in other folders)
